--- a/src/client/App.css
+++ b/src/client/App.css
@@ -29,3 +29,12 @@ button:focus {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); 
 }
 
+.hover-highlight {
+  stroke-width: 2px; 
+  stroke: #464545; 
+  filter: url(#shadow);
+
+}
+
+
+
