--- a/src/client/Layout.css
+++ b/src/client/Layout.css
@@ -1,3 +1,7 @@
+body h1{
+  font-size: 25px;
+}
+
 body h1,
 body h2 {
   margin-bottom: 0;
@@ -8,7 +12,7 @@ nav {
 }
 
 body main {
-  max-height: calc(100vh - 100px);
+  /*max-height: calc(100vh - 100px);*/
   overflow-y: auto;
 
   padding: var(--spacing) !important;
